2019-06-13  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.08
	* Fixed:
	- Disabling beeps internally too.
	- qwertz_sk_2.kbd is a qwerty one: --> qwerty_sk.kbd
	* Added: 
	- Portuguese translation, from Portugal.

2019-06-02  Felipe Castro (-) <fefcas@gmail.com>;
	* Release 3.07
	* Fixed:
	- Contry code for Slovenia is sk, not sl.
	- Using $(rootdatadir) for Gnome metadata.
	* Added:
	- qwertz_sk_2.kbd keyboard layout for Slovenia.
	- /usr/.../share/klavaro/preferences_darkmode.ini as dark colors example.
	* Removed:
	- Beeps, as they were not reliable.
	* Updated translations:
	- Dutch.
	- French.

2019-05-03  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.06
	* Changed:
	- GtkDataBox library clean-up.
	- Updated building infra to compile also on Windows.

2019-03-17  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.05
	* Fixed:
	- Crashing when not recognized option from command-line.
	* Added:
	- Instructions for typing with the shift keys (in the introduction).
	- Explanation about the blank lessons after 43, in basic module.
	- Possible to reset progress log of each module individually, as well
	  as character error charts or touch times charts in adaptability.
	- Possible to use paragraphs complete texts in Speed module (klavaro -x).
	* Updated translations:
	- Croatian.
	- Danish.
	- Esperanto.
	- Polish.
	- Portuguese (BR).
	- Russian.
	- Ukrainian.


2019-02-10  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.04
	* Fixed:
	- Tutor window was not allowing to shrink horizontaly, only growing.
	  Now its horizontal scroll is allowed to appear, liberating it to shrink.
	- Colors again on keyboard buttons, they had disappeared.
	- Proficiency log file shown as touch time per key in adaptability
	  charts  was being corrupted eventually.
	- Statistics after practice were being colorized.
	- Crashing? when no <libintl.h> installed on the system and? using 
	  ./configure --disable-nls
	- bg.paragraphs and bg.words chars fixed.